syntax = "proto3";

package service;

option go_package = "service/";


message ProductStockRequest {
  string product_id = 1;
}

message ProductStockResponse {
  string product_id = 1;
  int32 stock = 2;
}

service Product {
  rpc GetProductStock (ProductStockRequest) returns (ProductStockResponse);
}